# vulkan-engine

./: .gitignore  AllocatedImage.cpp  AllocatedImage.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Common.hpp  ComputeEffect.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  DeletionQueue.hpp  DescriptorAllocatorGrowable.cpp  DescriptorAllocatorGrowable.hpp  DescriptorLayoutBuilder.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  EngineStats.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  GLTFHDRMaterial.cpp  GLTFHDRMaterial.hpp  GLTFLoader.cpp  GLTFLoader.hpp  GLTFMetallic_Roughness.cpp  GLTFMetallic_Roughness.hpp  GraphicsTypes.hpp  ImmediateSubmitCommandBuffer.cpp  ImmediateSubmitCommandBuffer.hpp  Input.cpp  Input.hpp  Keys.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineBuilder.cpp  (+25 more)
cookbook_ref/: main.cpp
cookbook_ref/application/: CMakeLists.txt  Camera.cpp  Camera.hpp  GLTFLoader.cpp  GLTFLoader.hpp  ImguiManager.cpp  ImguiManager.hpp  Input.cpp  Input.hpp  Keys.hpp  RingBuffer.cpp  RingBuffer.hpp  Window.cpp  Window.hpp
cookbook_ref/core/: CMakeLists.txt  CoreUtils.cpp  CoreUtils.hpp
cookbook_ref/graphics/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandQueueManager.cpp  CommandQueueManager.hpp  Context.cpp  Context.hpp  DynamicRendering.cpp  DynamicRendering.hpp  Framebuffer.cpp  Framebuffer.hpp  Model.cpp  Model.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  ShaderModule.cpp  ShaderModule.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VulkanUtils.cpp  VulkanUtils.hpp  vma_initializer.cpp
cookbook_ref/resources/shaders/: Common.glsl
cookbook_ref/resources/shaders/bindfull/: bindfull.frag  bindfull.vert
cookbook_ref/resources/shaders/triangle/: triangle.vert
shaders/: brdf_input_structures.glsl  brdf_input_structures_2.glsl  brdf_mesh.frag  brdf_mesh.frag.spv  brdf_mesh.vert  brdf_mesh.vert.spv  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  common_pipeline_structures.glsl  geometry_pass.frag  geometry_pass.frag.spv  geometry_pass.vert  geometry_pass.vert.spv  gradient.comp  input_structures.glsl  interactive_gradient.comp  lighting_pass.frag  lighting_pass.frag.spv  lighting_pass.vert  lighting_pass.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  shadow_map.frag  shadow_map.vert  shadow_map.vert.spv  sky.comp  tex_image.frag  tone_mapping.comp  tone_mapping.comp.spv  triangle.frag  triangle.vert
